@@ -1,3 +1,13 @@
+2014-12-02  Eva Balazsfalvi  <evab.u-szeged@partner.samsung.com>
+
+        Fix class was previously declared as a struct warnings
+        https://bugs.webkit.org/show_bug.cgi?id=139131
+
+        Reviewed by Csaba Osztrogonác.
+
+        * UIProcess/CoordinatedGraphics/CoordinatedLayerTreeHostProxy.h:
+        * UIProcess/CoordinatedGraphics/WebViewClient.h:
+
 2014-12-02  Gyuyoung Kim  <gyuyoung.kim@samsung.com>
 
         [EFL] ewk_view_scale_set() doesn't work correctly
